# VSCodeBLE

./: .gitignore  CMakeLists.txt  Makefile  OldCMakeListsOld.txt  Readme.md
config/cmake/: arm-none-eabi-toolchain.cmake  common.cmake  cypress_peripheral_drivers_library.cmake
config/openocd/: board_cm4.cfg
config/svd/: psoc6_01.svd  psoc6_02.svd
design/: design.PSocConfig
design/GeneratedSource/: cycfg.c  cycfg.h  cycfg_ble.c  cycfg_ble.h  cycfg_clocks.c  cycfg_clocks.h  cycfg_connectivity.c  cycfg_connectivity.h  cycfg_notices.h  cycfg_peripherals.c  cycfg_peripherals.h  cycfg_pins.c  cycfg_pins.h  cycfg_platform.c  cycfg_platform.h
linker/: OnethinxCore_18.ld
source/: DemoKit01.h  LoRaWAN_keys.h  OnethinxCore01.c  OnethinxCore01.h  main.c
